# aula-api

./: .gitignore  Cargo.toml  README.md  aulaHandler.py  dateHelper.py  main.py  requirements.txt  run.sh  test.py  test.rs  unilogin.py
.github/workflows/: rust.yml
py/: aulaHandler.py  main.py  test.py  unilogin.py
rust-port/: Cargo.toml  unilogin.py
rust-port/src/: main.rs  unilogin.rs
src/: aulaHandler.rs  aula_handler.rs  getProfilesByLoginStruct.rs  lib.rs  main.rs  test.rs  tests.rs  unilogin.rs  util.rs
src/request_structs/: get_events_by_profile_ids_and_resource_ids.rs  mod.rs
src/responseStructs/: mod.rs
src/response_structs/: get_events_by_profile_ids_and_resource_ids.rs  get_new_threads.rs  get_profiles_by_login.rs  messaging_get_threads.rs  mod.rs
