[package]
name = "rust-port"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.24", features = ["json", "cookie_store", "cookies"] }
reqwest_cookie_store = "0.6.0"
scraper = "0.19.0"
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full"] }
